change List<String> getOddString to return mutable list